--- a/otherpages.css/services.css
+++ b/otherpages.css/services.css
@@ -79,8 +79,22 @@
   }
 
   .nav-links li a:hover {
-    color: #fff;
-    background: rgba(255,255,255,0.08);
+    color: #ff1b1b;
+  }
+
+  .nav-links li a::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #ff2020;
+    transition: width 0.3s ease;
+  }
+
+  .nav-links li a:hover::after {
+    width: 100%;
   }
 
   .btn-member {
